# bus-board

./: .env  pyproject.toml  wsgi.py
busboard/: app.py  config.py
busboard/controllers/: __init__.py  bus_time_controller.py
busboard/model/: Bus.py
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: ApiService.js  index.css
client/src/components/: App.js
client/src/components/BusComponent/: BusComponent.css  BusComponent.jsx
client/src/components/BusSearchComponent/: BusSearchComponent.css  BusSearchComponent.jsx
client/src/components/HomePage/: HomeComponents.js  HomePage.css  HomePage.jsx
client/src/components/RouteComponent/: RouteComponent.css  RouteComponent.jsx
