[tool.poetry]
name = "bus-board"
version = "0.1.0"
description = ""
authors = ["Adhithi <Adhithi.Kedlaya@softwire.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
